--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "boostrap": "^2.0.0",
+    "bootstrap": "^4.5.3",
     "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "react-bootstrap": "^1.4.0"
   }
 }
